--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -64,6 +64,7 @@ time, mark, audio, video {
     color: white;
 }
 
+
 /* Navbar.jsx */
 .navbar{
     width: 100vw;
@@ -180,6 +181,10 @@ time, mark, audio, video {
     margin-right: 20px;
 }
 
+.mobile-navbar{
+    display:none;
+}
+
 #profile{
     cursor: default;
 }
@@ -250,4 +255,132 @@ time, mark, audio, video {
     border-radius: 50%;
     margin-right: 10px;
 }
+
+@media screen and (max-width:960px){
+
+    .login{
+        position :absolute;
+        top: 35%;  
+        left: 7%;
+    }
+    
+    .mobile-navbar{
+        display:block;
+        width: 60px;
+    }
+
+    .navbar{
+        width: 100svw;
+        display: flex;
+        flex-direction: row;
+        margin-right: 20px;
+        padding-top: 16px;
+        line-height: 1.5;
+        border-bottom: 1px solid rgb(133, 127, 127);
+    }
+
+    .nav-content{
+        display:none;
+    }
+
+    .nav{
+        margin-top: 5px;
+        display:flex;
+        align-items: flex-end;
+        width:60px;
+    }
+
+
+    .github-nav{
+        width:85svw;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 14px;
+    }
+    
+
+    #github-icons{
+        color:black;
+        font-size: 3.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #github-icons:hover{
+        transform: scale(1.0);
+    }
+    
+    .filter-container{
+        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        width: 350px;
+        top: 71px;
+        left: 10px;
+        background-color: #fff;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+        right: 0;
+        z-index: 1;
+        border: 1px solid black;
+        padding: 0px;
+        border-radius: 5px;
+        margin-right: 20px;
+    }
+
+    .search-filter{
+        display:flex;
+        flex-direction: row;
+    }
+
+    .form-search{
+        width:100%;
+        border: none;
+        border-bottom: 1px solid black;
+        margin-bottom: 5px;
+    }
+    
+
+    #search-box{
+        margin: 0;
+        padding: 10px;
+        width: 290px;
+        color: white;
+        background-color: black;
+        border: none;
+    }
+
+    .closebutton{
+        width: 40px;
+        height: 40px;
+    }
+
+    #menu-icons{
+        color:black;
+        font-size: 2.2rem;
+        margin-top: 10px;
+        margin-left: 15px;
+        cursor: pointer;
+    }
+    
+    #times-icon{
+        color:black;
+        font-size: 2.2rem;
+        margin-top: 10px;
+        margin-left: 15px;
+        cursor: pointer;
+    }
+
+   /*Home.jsx */
+
+    .Home-Page{
+        width: 100svw;
+        height: 100svh;
+        overflow-x: hidden;
+    }
+}
+
+
 
