--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 /* Login.jsx*/
 
 .login-background{
+    top:0;
     position: absolute;
     width: 100vw;
     height: 100vh;
