--- a/client/src/css/Createbutton.css
+++ b/client/src/css/Createbutton.css
@@ -31,7 +31,7 @@
 
 .modal-container{
     position: absolute;
-    top: 40px;
+    top: 0px;
     display: flex;
     margin: 0 auto;
     width: 100vw;
@@ -51,7 +51,7 @@
     background-color: white;
     z-index: 5;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 25px;
 }
 
 .modal-header{
@@ -151,7 +151,7 @@
     padding: 15px 50px;
     margin-right: 20px;
     margin-left: 10px;
-    border-radius: 10px;
+    border-radius: 15px;
     border: none;
     background-color: white;
     font-weight: 600;
@@ -226,15 +226,19 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 100svw;
         padding-bottom:7px;
         padding-right: 7px;
         overflow-y: scroll;
     }
+
+    .modal-dialog{
+        height: 500px;
+    }
     
     .modal-container{
         top: 20px;
-        width: 100svw;
+        height: 100svh;
+        overflow-y: scroll
     }
     
     .state-select{
@@ -248,6 +252,13 @@
         border-radius: 5px;
     }
 
-    
+    .repo-label, .state-label{
+        font-size: 17px;
+    }
+
+    .form-label{
+        font-size: 17px !important;
+    }
+
     
 }
