--- a/client/src/css/LeftSideBar.css
+++ b/client/src/css/LeftSideBar.css
@@ -57,8 +57,8 @@
     
     .container{
         height: 100svh;
-        width: 100svw;
         overflow-x:hidden;
+        overflow-y:scroll;
     }
     
 }
