--- a/client/src/css/Content.css
+++ b/client/src/css/Content.css
@@ -36,14 +36,13 @@ body{
 
 #create-button{
     width: 100%;
-    font-weight: 600;
     margin-left: 10px;
     padding: 10px;
-    font-size: 15px;
+    font-size: 16px;
     border-radius: 5px;
     border : 1px solid black;
     background-color: white;
-    cursor: pointer
+    cursor: pointer;
 }
 
 #create-button:hover{
