--- a/client/src/css/Createbutton.css
+++ b/client/src/css/Createbutton.css
@@ -19,6 +19,10 @@
     background: white;
 }
 
+.modal-dialog{
+    border:none;
+}
+
 .modal-background{
     opacity:0.5 !important;
     width: 100vw;
@@ -29,20 +33,15 @@
     align-items: center;
 }
 
+
+
 .modal-container{
     position: absolute;
-    top: 0px;
-    display: flex;
-    margin: 0 auto;
-    width: 100vw;
-    height: 100vw;
-    
-}
-
-.modal-content{
-    top: 0;
-    margin: auto;
-    margin-top: 60px;
+    top: 80px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,6 +51,11 @@
     z-index: 5;
     border: 1px solid black;
     border-radius: 25px;
+}
+
+.modal-content{
+    height: 750px;
+    border: none;
 }
 
 .modal-header{
@@ -76,7 +80,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 85%;
+    height: 80%;
 }
 
 .input-area{
@@ -107,9 +111,6 @@
 .text-area{
     display: flex;
     flex-direction: column;
-    margin: 0 20px;
-    height: 100%;
-    margin-bottom: 10px;
 }
 
 .text-area > label{
@@ -120,7 +121,7 @@
 .text-area > textarea{
     font-family: Georgia, Times, Times New Roman, serif;
     font-size: 18px;
-    height: 65%;
+    height: 75%;
     border-radius: 5px;
 }
 
@@ -129,9 +130,6 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
-    width: 100%;
-    height: 5%;
 }
 
 .close-modal{
@@ -207,6 +205,7 @@
     width: 45%;
     margin-left: 20px;
 }
+
 .create-body::placeholder{
     padding-top: 5px;
     padding-left: 5px;
@@ -217,39 +216,22 @@
 }
 
 @media screen and (max-width:960px){
-    .modal-content{
-        width:375px;
-        height: 550px;
-    }
-
     .modal-backdrop{
-        position: fixed;
         top: 0;
         left: 0;
         padding-bottom:7px;
         padding-right: 7px;
         overflow-y: scroll;
     }
-
-    .modal-dialog{
-        height: 500px;
-    }
     
     .modal-container{
-        top: 20px;
-        height: 100svh;
-        overflow-y: scroll
+        top: 40px;
+        width: 370px;
+        height: 550px;
     }
     
     .state-select{
         margin-right: 20px;
-    }
-
-    .text-area > textarea{
-        font-family: Georgia, Times, Times New Roman, serif;
-        font-size: 18px;
-        height:230px!important;
-        border-radius: 5px;
     }
 
     .repo-label, .state-label{
