--- a/client/src/css/EditIssue.css
+++ b/client/src/css/EditIssue.css
@@ -14,11 +14,18 @@
 }
 .issue-container{
     position: absolute;
-    top:0;
+    top:80px;
     bottom: 0;
     left: 0;
     right: 0;
-    margin: auto;
+    z-index: 5;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    width: 800px;
+    height: 750px;
+    background-color: white;
+    border: 1px solid black;
 }
 
 .issue-header{
@@ -78,8 +85,8 @@
     display: flex;
     flex-direction: column;
     margin: 0 20px;
-    height: 100%;
     margin-bottom: 10px;
+    height: 500px;
 }
 
 .text-area > label{
@@ -90,7 +97,6 @@
 .text-area > textarea{
     font-family: Georgia, Times, Times New Roman, serif;
     font-size: 18px;
-    height: 65%;
     border-radius: 5px;
 }
 
@@ -99,19 +105,31 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
-    width: 100%;
-    height: 5%;
+    height: 50px;
 }
 
 @media screen and (max-width:960px) {
+    
     .issue-labels{
         width:90%;
     }
 
-    .modal-dialog{
-        height: 100svh;
-        overflow-y: scroll;
-        overflow-x: hidden;
+    
+    .modal-body{
+        height: 400px;
+    }
+    
+    .modal-dialog, .modal-content{
+        height: 550px;
+    }
+
+    .issue-container{
+        top: 40px;
+        width: 370px;
+        height: 550px;
+    }
+
+    .text-area{
+        height: 250px;
     }
 }
