--- a/client/src/css/LeftSideBar.css
+++ b/client/src/css/LeftSideBar.css
@@ -1,9 +1,25 @@
+
 .create-div{
     display:flex;
     flex-direction: column;
     width: 92%;
     left: 0;
     margin-bottom: 20px;
+}
+
+.unselected-popup{
+    position: absolute;
+    display:flex;
+    inset: 0;
+    top: 50%;
+    left: 50%;
+    border: 1px solid black;
+    width: 200px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .left-side-container{
     display: flex;
@@ -59,6 +75,11 @@
         height: 100svh;
         overflow-x:hidden;
         overflow-y:scroll;
+    }
+
+    .unselected-popup{
+        left: 23%;
+        top: 125%;
     }
     
 }
