--- a/client/src/css/SearchIssues.css
+++ b/client/src/css/SearchIssues.css
@@ -95,6 +95,7 @@
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    
 }
 .card-footer{
     display:flex;
@@ -180,27 +181,6 @@
     font-weight: 600;
 }
 
-.delete-pop{
-    position: absolute;
-    z-index:1;
-    margin-top :30px;
-    margin-right: 70px;
-    width: 120px;
-}
-
-.delete-pop-container{
-    display:flex;
-    flex-direction: column;
-    background-color: white;
-    align-items: center;
-    color: black;
-    width:100%;
-    padding: 20px;
-    border: 1px solid black;
-    border-radius:5px;
-    cursor:default;
-}
-
 .delete-pop-btn{
     margin-top: 5px;
     display: flex;
@@ -240,4 +220,8 @@
    #search-issue{
         display:none;
    }
+
+   .delete-pop{
+    right: 10%;
+    }
 }
